fixed half blurry images on high resolution

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   padding: 24px 110px;
   max-width: 1184px;
   margin: auto;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 
 .wrapper {
